--- a/README.html
+++ b/README.html
@@ -409,6 +409,8 @@ opportunities and addressing broader social issues.</li>
 was tabulated from the data collected by the ILO. It is updated and
 posted on Kaggle by Sazidul Islam to measure changes in employment
 across 189 countries/regions over 11 years.</p>
+<p><strong>Observations (rows)</strong>: 1,135</p>
+<p><strong>Features (columns)</strong>: 16</p>
 <p>##Limitations/Problems</p>
 <p>There are a few limitations that we should consider when working with
 this data set. For example, it does not provide a holistic view of
